--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
+    "seed:users": "node seedUsers.js",
     "dev": "nodemon server.js",
     "init-db": "node initDB.js",
     "test": "echo \"Error: no test specified\" && exit 1"
