--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 MONGO_URI="mongodb+srv://adminhost:sundram7979@cluster0.dmkrx.mongodb.net/leaderboard"
-FRONTEND_URL=""
+FRONTEND_URL=http://localhost:5173
